# Advent

./: Day1.ipynb  Day10.ipynb  Day11.ipynb  Day13.ipynb  Day15.ipynb  Day1_solutions.ipynb  Day2_solutions.ipynb  Day3.ipynb  Day3_solutions.ipynb  Day4_solutions.ipynb  Day5.ipynb  Day5_solutions.ipynb  Day6_solutions.ipynb  Day7.ipynb  Day7_solutions.ipynb  Day8.ipynb  Day9.ipynb  Untitled.ipynb  pyproject.toml
2017/: Day2_solutions.ipynb
advent17/: Day1_solutions.ipynb  Day3_solutions.ipynb
advent18/: Day10.ipynb  Day12.ipynb  Day13.ipynb  Day14.ipynb  Day2.ipynb  Day4.ipynb  Day6.ipynb  Day7.ipynb  Day8.ipynb  Day9.ipynb
advent21/: 2021.ipynb  bruteforce.py
advent23/: day1.py  day2.py  day3.py
tests/advent23/: test_day1.py  test_day2.py  test_day3.py
