[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Gijs Straathof <gijs@connectholland.nl>"]

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.11.4"
click = "^8.1.7"
notebook = "^7.0.6"
advent-of-code-data = "^2.0.1"
pytest = "^7.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
